GL/Projet_GL/src/test/deca/syntax/invalid/AvecObjet/vis_invalide.deca
// Test : fausse visibilité pour les fields
// But : détecter l'utilisation de public pour la visibilité des fields
// Type d'erreur : erreur syntaxique
// Résultat attendu : no viable alternative at input 'publicintx'


class Test{
   public int x;

}

{
    Test t = new Test();
}